[Final] Translated the project into Java 8